fix: height issue on firefox

--- a/src/MediaUploadForm/components/DropZone.module.css
+++ b/src/MediaUploadForm/components/DropZone.module.css
@@ -8,6 +8,7 @@
   flex: 1;
   justify-content: center;
   height: 240px;
+  min-height: 240px;
   transition: .3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
@@ -28,6 +29,7 @@
 .dropzone-content img {
   width: 100%;
   height: 240px;
+  min-height: 240px;
   object-fit: contain;
 }
 
